fix(gux-text-field): fixed clear button covering text
COMUI-187

--- a/src/components/gux-text-field/gux-text-field.less
+++ b/src/components/gux-text-field/gux-text-field.less
@@ -88,7 +88,7 @@ gux-text-field {
         box-shadow: 0px 0px 4px @focus-outline;
       }
 
-      .text-clearable {
+      &.text-clearable {
         padding-right: 25px;
       }
     }
